# Routes/Router/fireRoute.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const {verifyToken} = require('../../Middleware/authMiddleware')
 const FireQuestion = require("../../Controller/FireQuestion/fireController");
 
-router.post("/create", verifyToken,FireQuestion.create);
-router.get('/calculate/:fireId', verifyToken, FireQuestion.calculate);
+router.post("/create", verifyToken, FireQuestion.create);
+router.get('/calculate/:fireId/calculate', verifyToken, FireQuestion.calculate);
 
 module.exports = router;
